--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.1",
     "tw-elements-react": "^1.0.0-alpha2",
     "web-vitals": "^2.1.4"
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.16",
     "gh-pages": "^6.1.0",
     "postcss": "^8.4.31",
